--- a/meiduo_hersin/templates/register.html
+++ b/meiduo_hersin/templates/register.html
@@ -59,9 +59,9 @@
 						<span class="error_tip">请填写短信验证码</span>
 					</li>
 					<li class="agreement">
-						<input type="checkbox" name="allow" id="allow" checked="checked">
-						<label>同意”美多商城用户使用协议“</label>
-						<span class="error_tip">请勾选用户协议</span>
+						<input type="checkbox" name="allow" id="allow" checked="checked" v-model="allow">
+						<label >同意”美多商城用户使用协议“</label>
+						<span class="error_tip" v-show="allow == false">[[ error_allow_message ]]</span>
 					</li>
 					<li class="reg_sub">
 						<input type="submit" value="注 册">
