--- a/meiduo_hersin/templates/register.html
+++ b/meiduo_hersin/templates/register.html
@@ -49,14 +49,14 @@
 					<li>
                         <label>图形验证码:</label>
                         <input type="text" name="pic_code" id="pic_code" class="msg_input">
-                        <img src="../static/images/pic_code.jpg" alt="图形验证码" class="pic_code">
-                        <span class="error_tip">请填写图形验证码</span>
+                        <img v-bind:src="image_code_url" v-on:click="generate_image_code" alt="图形验证码" class="pic_code">
+                        <span class="error_tip" v-show="error_image_code">[[ error_sms_code_message ]]</span>
                     </li>
 					<li>
 						<label>短信验证码:</label>
 						<input type="text" name="sms_code" id="msg_code" class="msg_input">
 						<a href="javascript:;" class="get_msg_code">获取短信验证码</a>
-						<span class="error_tip">请填写短信验证码</span>
+						<span class="error_tip" >请填写短信验证码</span>
 					</li>
 					<li class="agreement">
 						<input type="checkbox" name="allow" id="allow" checked="checked" v-model="allow">
