--- a/meiduo_hersin/templates/register.html
+++ b/meiduo_hersin/templates/register.html
@@ -26,43 +26,51 @@
 				<form method="post" class="register_form" v-on:submit="on_submit">
 				{{ csrf_input }}
                     <ul>
+
 					<li>
 						<label>用户名:</label>
 						<input type="text" name="username" id="user_name" v-model="username" v-on:blur="check_username">
 						<span class="error_tip" v-show="error_name">[[ error_name_message ]]</span>
 					</li>
+
 					<li>
 						<label>密码:</label>
 						<input type="password" name="password" id="pwd" v-model="password" v-on:blur="check_password">
 						<span class="error_tip" v-show="error_password">[[ error_password_message ]]</span>
 					</li>
+
 					<li>
 						<label>确认密码:</label>
 						<input type="password" name="password2" id="cpwd" v-model="password2" v-on:blur="check_password2">
 						<span class="error_tip" v-show="error_password2">[[ error_password2_message ]]</span>
 					</li>
+
 					<li>
 						<label>手机号:</label>
 						<input type="text" name="mobile" id="phone" v-model="mobile" v-on="check_mobile">
 						<span class="error_tip" v-show="error_mobile">[[ error_mobile_message ]]</span>
 					</li>
+
 					<li>
                         <label>图形验证码:</label>
-                        <input type="text" name="pic_code" id="pic_code" class="msg_input">
+                        <input type="text" name="pic_code" id="pic_code" class="msg_input" v-model="image_code">
                         <img v-bind:src="image_code_url" v-on:click="generate_image_code" alt="图形验证码" class="pic_code">
-                        <span class="error_tip" v-show="error_image_code">[[ error_sms_code_message ]]</span>
+                        <span class="error_tip" v-show="error_image_code">[[ error_image_code_message ]]</span>
                     </li>
-					<li>
-						<label>短信验证码:</label>
-						<input type="text" name="sms_code" id="msg_code" class="msg_input">
-						<a href="javascript:;" class="get_msg_code">获取短信验证码</a>
-						<span class="error_tip" >请填写短信验证码</span>
-					</li>
+
+                    <li>
+                        <label>短信验证码:</label>
+                        <input type="text" v-model="sms_code" @blur="check_sms_code" name="sms_code" id="msg_code" class="msg_input">
+                        <a @click="send_sms_code" class="get_msg_code">[[ sms_code_tip ]]</a>
+                        <span class="error_tip" v-show="error_sms_code">[[ error_sms_code_message ]]</span>
+                    </li>
+
 					<li class="agreement">
 						<input type="checkbox" name="allow" id="allow" checked="checked" v-model="allow">
 						<label >同意”美多商城用户使用协议“</label>
 						<span class="error_tip" v-show="allow == false">[[ error_allow_message ]]</span>
 					</li>
+
 					<li class="reg_sub">
 						<input type="submit" value="注 册">
 					</li>
