--- a/meiduo_hersin/templates/oauth_callback.html
+++ b/meiduo_hersin/templates/oauth_callback.html
@@ -3,18 +3,18 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>美多商城-绑定用户</title>
-    <link rel="stylesheet" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-    <script type="text/javascript" src="js/host.js"></script>
-    <script type="text/javascript" src="js/vue-2.5.16.js"></script>
-    <script type="text/javascript" src="js/axios-0.18.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
+    <script type="text/javascript" src="../static/js/host.js"></script>
+    <script type="text/javascript" src="../static/js/vue-2.5.16.js"></script>
+    <script type="text/javascript" src="../static/js/axios-0.18.0.min.js"></script>
 </head>
 <body>
     <div id="app" v-cloak>
         <div>
             <div class="register_con">
                 <div class="l_con fl">
-                    <a href="../templates/index.html" class="reg_logo"><img src="images/logo.png"></a>
+                    <a href="index.html" class="reg_logo"><img src="../static/images/logo.png"></a>
                     <div class="reg_slogan">商品美 · 种类多 · 欢迎光临</div>
                     <div class="reg_banner"></div>
                 </div>
@@ -39,7 +39,7 @@
                                 <li>
                                     <label>图形验证码:</label>
                                     <input type="text" name="pic_code" id="pic_code" class="msg_input">
-                                    <img src="images/pic_code.jpg" alt="图形验证码" class="pic_code">
+                                    <img src="../static/images/pic_code.jpg" alt="图形验证码" class="pic_code">
                                     <span class="error_tip">请填写图形验证码</span>
                                 </li>
                                 <li>
@@ -72,8 +72,8 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="js/host.js"></script>
-    <script type="text/javascript" src="js/common.js"></script>
-    <script type="text/javascript" src="js/oauth_callback.js"></script>
+    <script type="text/javascript" src="../static/js/host.js"></script>
+    <script type="text/javascript" src="../static/js/common.js"></script>
+    <script type="text/javascript" src="../static/js/oauth_callback.js"></script>
 </body>
 </html>
