--- a/meiduo_hersin/templates/oauth_callback.html
+++ b/meiduo_hersin/templates/oauth_callback.html
@@ -26,7 +26,7 @@
                     <div class="reg_form clearfix">
                         <form id="reg_form" method="post">
                         {{ csrf_input }}
-                        <input type="hidden" value="{{ openid_access_token }}">
+                        <input type="hidden" value="{{ openid_access_token }}" name="openid_access_token">
                             <ul>
                                 <li>
                                     <label>手机号:</label>
