--- a/meiduo_hersin/templates/oauth_callback.html
+++ b/meiduo_hersin/templates/oauth_callback.html
@@ -24,38 +24,49 @@
                         <h1>绑定用户</h1>
                     </div>
                     <div class="reg_form clearfix">
-                        <form id="reg_form" method="post">
-                        {{ csrf_input }}
-                        <input type="hidden" value="{{ openid_access_token }}" name="openid_access_token">
+
+                        <form id="reg_form" method="post" v-on:submit="on_submit" >
+                            {{ csrf_input }}
+                            <input type="hidden" value="{{ openid_access_token }}" name="access_token">
+
                             <ul>
+
                                 <li>
                                     <label>手机号:</label>
-                                    <input type="text" name="mobile" id="phone">
-                                    <span class="error_tip">请输入正确的手机号码</span>
+                                    <input type="text" name="mobile" id="phone" @blur="check_mobile" v-model="mobile">
+                                    <span class="error_tip" v-show="error_mobile">[[error_mobile_message]]</span>
                                 </li>
+
                                 <li>
                                     <label>密码:</label>
-                                    <input type="password" name="pwd" id="pwd">
-                                    <span class="error_tip">请输入8-20位密码</span>
+                                    <input type="password" name="pwd" id="pwd" @blur="check_password" v-model="password">
+                                    <span class="error_tip" v-show="error_password">[[ error_password_message ]]</span>
                                 </li>
+
                                 <li>
                                     <label>图形验证码:</label>
-                                    <input type="text" name="pic_code" id="pic_code" class="msg_input">
-                                    <img src="../static/images/pic_code.jpg" alt="图形验证码" class="pic_code">
-                                    <span class="error_tip">请填写图形验证码</span>
+                                    <input type="text" v-model="image_code" v-on:blur="check_image_code" name="pic_code" id="pic_code" class="msg_input">
+                                    <img v-bind:src="image_code_url" v-on:click="generate_image_code" alt="图形验证码" class="pic_code">
+                                    <span class="error_tip" v-show="error_image_code" >[[ error_image_code_message ]]</span>
                                 </li>
+
                                 <li>
                                     <label>短信验证码:</label>
-                                    <input type="text" name="sms_code" id="msg_code" class="msg_input">
-                                    <a href="javascript:;" class="get_msg_code">获取短信验证码</a>
-                                    <span class="error_tip">请填写短信验证码</span>
+                                    <input type="text" name="sms_code" id="msg_code" class="msg_input" v-model="sms_code" @blur="check_sms_code">
+                                    <a href="javascript:;" class="get_msg_code" @click="send_sms_code">获取短信验证码</a>
+                                    <span class="error_tip" v-show="error_sms_code">[[ error_sms_code_message ]]</span>
                                 </li>
+
                                 <li class="reg_sub">
                                     <input type="submit" value="保 存" name="">
                                 </li>
+
                             </ul>
+
                         </form>
+
                     </div>
+
                 </div>
             </div>
 
