--- a/meiduo_hersin/templates/index.html
+++ b/meiduo_hersin/templates/index.html
@@ -47,7 +47,8 @@
 
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="/center/">用户中心</a>
+{#					<a href="/center/">用户中心</a>#}
+                    <a href="{{ url('users:center') }}">用户中心</a>
 					<span>|</span>
 					<a href="../static/cart.html">我的购物车</a>
 					<span>|</span>
