--- a/meiduo_hersin/templates/user_center_info.html
+++ b/meiduo_hersin/templates/user_center_info.html
@@ -20,6 +20,7 @@
 	<div id="app" v-cloak>
 	<div class="header_con">
 		<div class="header">
+            {{ csrf_input }}
 			<div class="welcome fl">欢迎来到美多商城!</div>
 			<div class="fr">
 				<div class="login_info fl">
