--- a/meiduo_hersin/templates/user_center_site.html
+++ b/meiduo_hersin/templates/user_center_site.html
@@ -63,14 +63,14 @@
 		</div>
 		<div class="right_content clearfix">
 			<div class="site_top_con">
-				<a href="javascript:;">新增收货地址</a>
+				<a href="javascript:;" @click="show_add_site">新增收货地址</a>
 				<span>你已创建了<b>2</b>个收货地址，最多可创建<b>20</b>个</span>
 			</div>
 			<div class="site_con">
 				<div class="site_title">
 					<h3>张大山A 北京</h3>
 					<a href="javascript:;" class="edit_icon"></a>
-					<em>默认地址</em>						
+					<em>默认地址</em>
 					<span class="del_site">×</span>
 				</div>
 				<ul class="site_list">
@@ -104,7 +104,7 @@
 					<a href="javascript:;" class="set_default">设为默认</a>
 					<a href="javascript:;" class="edit_icon">编辑</a>
 				</div>
-			</div>			
+			</div>
 		</div>
 	</div>
 	<div class="footer">
@@ -115,76 +115,62 @@
 			<span>|</span>
 			<a href="#">招聘人才</a>
 			<span>|</span>
-			<a href="#">友情链接</a>		
+			<a href="#">友情链接</a>
 		</div>
 		<p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
 
-	<div class="pop_con">
-
-		<div class="site_con site_pop">
-				<div class="site_pop_title">
-					<h3>新增收货地址</h3>
-					<a href="javascript:;">×</a>
-				</div>
-				<form>
-					<div class="form_group">
-						<label>收货人：</label>
-						<input type="text" name="receiver" class="receiver">
-                        <span class="receiver_error">请填写收货人</span>
-					</div>
-					<div class="form_group">
-						<label>所在地区：</label>
-						<select>
-							<option value="0">请选择</option>
-							<option value="1">北京</option>
-							<option value="2">上海</option>
-							<option value="3">广州</option>
-							<option value="4">深圳</option>
-						</select>
-						<select>
-							<option value="0">请选择</option>
-							<option value="1">北京</option>
-							<option value="2">上海</option>
-							<option value="3">广州</option>
-							<option value="4">深圳</option>
-						</select>
-						<select>
-							<option value="0">请选择</option>
-							<option value="1">东城区</option>
-							<option value="2">西城区</option>
-							<option value="3">昌平区</option>
-							<option value="4">海淀区</option>
-						</select>
-					</div>
-					<div class="form_group">
-						<label>详细地址：</label>
-						<input type="text" name="place" class="place">
-                        <span class="place_error">请填写详细地址</span>
-					</div>
-					<div class="form_group">
-						<label>手机：</label>
-						<input type="text" name="mobile" class="mobile">
-                        <span class="mobile_error">手机号有误</span>
-					</div>
-					<div class="form_group">
-						<label>固定电话：</label>
-						<input type="text" name="tel" class="tel">
-                        <span class="tel_error">固定电话有误</span>
-					</div>
-					<div class="form_group">
-						<label>邮箱：</label>
-						<input type="text" name="email" class="email">
-                        <span class="email_error">邮箱格式有误</span>
-					</div>
-					<input type="button" name="" value="新 增" class="info_submit">
-					<input type="reset" name="" value="取 消" class="info_submit info_reset">
-				</form>
-		</div>
-
-		<div class="mask"></div>
-	</div>
+	<div class="pop_con" v-show="is_show_edit" v-cloak>
+    <div class="site_con site_pop">
+            <div class="site_pop_title">
+                <h3 v-if="editing_address_index">编辑收货地址</h3>
+                <h3 v-else>新增收货地址</h3>
+                <a @click="is_show_edit=false">×</a>
+            </div>
+            <form>
+                <div class="form_group">
+                    <label>*收货人：</label>
+                    <input v-model="form_address.receiver" @blur="check_receiver" type="text" class="receiver">
+                    <span v-show="error_receiver" class="receiver_error">请填写收件人</span>
+                </div>
+                <div class="form_group">
+                    <label>*所在地区：</label>
+                    <select v-model="form_address.province_id">
+                        <option v-for="province in provinces" :value="province.id">[[ province.name ]]</option>
+                    </select>
+                    <select v-model="form_address.city_id">
+                        <option v-for="city in cities" :value="city.id">[[ city.name ]]</option>
+                    </select>
+                    <select v-model="form_address.district_id">
+                        <option v-for="district in districts" :value="district.id">[[ district.name ]]</option>
+                    </select>
+                </div>
+                <div class="form_group">
+                    <label>*详细地址：</label>
+                    <input v-model="form_address.place" @blur="check_place" type="text" class="place">
+                    <span v-show="error_place" class="place_error">请填写地址信息</span>
+                </div>
+                <div class="form_group">
+                    <label>*手机：</label>
+                    <input v-model="form_address.mobile" @blur="check_mobile" type="text" class="mobile">
+                    <span v-show="error_mobile" class="mobile_error">手机信息有误</span>
+                </div>
+                <div class="form_group">
+                    <label>固定电话：</label>
+                    <input v-model="form_address.tel" @blur="check_tel" type="text" class="tel">
+                    <span v-show="error_tel" class="tel_error">固定电话有误</span>
+                </div>
+                <div class="form_group">
+                    <label>邮箱：</label>
+                    <input v-model="form_address.email" @blur="check_email" type="text" class="email">
+                    <span v-show="error_email" class="email_error">邮箱信息有误</span>
+                </div>
+                <input @click="save_address" type="button" name="" value="新 增" class="info_submit">
+                <input @click="is_show_edit=false" type="reset" name="" value="取 消" class="info_submit info_reset">
+            </form>
+    </div>
+</div>
 
 	<div class="pop_con2">
 		<div class="confirm_pop">
