更新地址的功能

--- a/meiduo_hersin/templates/user_center_site.html
+++ b/meiduo_hersin/templates/user_center_site.html
@@ -93,7 +93,7 @@
                 </ul>
                 <div class="down_btn">
                     <a v-if="address.id!=default_address_id">设为默认</a>
-                    <a href="javascript:;" class="edit_icon">编辑</a>
+                    <a href="javascript:;" class="edit_icon" @click="show_edit_site(index)" >编辑</a>
                 </div>
             </div>
         </div>
