自定义文件存储系统(改写Storage的url方法)

--- a/meiduo_hersin/templates/index.html
+++ b/meiduo_hersin/templates/index.html
@@ -168,7 +168,7 @@
         </div>
         <div class="goods_con clearfix">
             <div class="goods_banner fl">
-                <img src="{{ contents.index_1f_logo.0.image}}">
+                <img src="{{ contents.index_1f_logo.0.image.url}}">
                 <div class="channel">
                     {% for content in contents.index_1f_pd %}
                     <a href="{{ content.url }}">{{ content.title }}</a>
@@ -185,7 +185,7 @@
                 <ul v-show="f1_tab===1" class="goods_list fl">
                     {% for content in contents.index_1f_ssxp %}
                     <li>
-                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                         <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                         <div class="price">{{ content.text }}</div>
                     </li>
@@ -194,7 +194,7 @@
                 <ul v-show="f1_tab===2" class="goods_list fl">
                     {% for content in contents.index_1f_cxdj %}
                     <li>
-                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                         <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                         <div class="price">{{ content.text }}</div>
                     </li>
@@ -203,7 +203,7 @@
                 <ul v-show="f1_tab===3" class="goods_list fl">
                     {% for content in contents.index_1f_sjpj %}
                     <li>
-                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                         <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                         <div class="price">{{ content.text }}</div>
                     </li>
@@ -224,7 +224,7 @@
         </div>
         <div class="goods_con clearfix">
             <div class="goods_banner fl">
-                <img src="{{ contents.index_2f_logo.0.image}}">
+                <img src="{{ contents.index_2f_logo.0.image.url}}">
                 <div class="channel">
                     {% for content in contents.index_2f_pd %}
                     <a href="{{ content.url }}">{{ content.title }}</a>
@@ -240,7 +240,7 @@
                 <ul v-show="f2_tab===1" class="goods_list fl">
                     {% for content in contents.index_2f_cxdj %}
                     <li>
-                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                         <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                         <div class="price">{{ content.text }}</div>
                     </li>
@@ -249,7 +249,7 @@
                 <ul v-show="f2_tab===2" class="goods_list fl">
                     {% for content in contents.index_2f_jjhg %}
                     <li>
-                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                         <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                         <div class="price">{{ content.text }}</div>
                     </li>
@@ -270,7 +270,7 @@
         </div>
         <div class="goods_con clearfix">
             <div class="goods_banner fl">
-                <img src="{{ contents.index_3f_logo.0.image }}">
+                <img src="{{ contents.index_3f_logo.0.image.url }}">
                 <div class="channel">
                     {% for content in contents.index_3f_pd %}
                     <a href="{{ content.url }}">{{ content.title }}</a>
@@ -286,7 +286,7 @@
                 <ul v-show="f3_tab===1" class="goods_list fl">
                     {% for content in contents.index_3f_shyp %}
                     <li>
-                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                         <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                         <div class="price">{{ content.text }}</div>
                     </li>
@@ -295,7 +295,7 @@
                 <ul v-show="f3_tab===2" class="goods_list fl">
                     {% for content in contents.index_3f_cfyp %}
                     <li>
-                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image }}"></a>
+                        <a href="{{ content.url }}" class="goods_pic"><img src="{{ content.image.url }}"></a>
                         <h4><a href="{{ content.url }}" title="{{ content.title }}">{{ content.title }}</a></h4>
                         <div class="price">{{ content.text }}</div>
                     </li>
