--- a/meiduo_hersin/templates/list.html
+++ b/meiduo_hersin/templates/list.html
@@ -3,12 +3,16 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>美多商城-商品列表</title>
-	<link rel="stylesheet" type="text/css" href="{{ static('css/jquery.pagination.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ static('css/jquery.pagination.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ static('css/reset.css') }}">
 	<link rel="stylesheet" type="text/css" href="{{ static('css/main.css') }}">
     <script type="text/javascript" src="{{ static('js/jquery-1.12.4.min.js') }}"></script>
 	<script type="text/javascript" src="{{ static('js/vue-2.5.16.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/axios-0.18.0.min.js') }}"></script>
+    <script type="text/javascript">
+        let category_id="{{ category.id }}"
+    </script>
+</head>
 </head>
 <body>
 	<div id="app" v-cloak>
@@ -36,11 +40,11 @@
                     <a href="/orders/">我的订单</a>
                 </div>
 			</div>
-		</div>		
+		</div>
 	</div>
 
 	<div class="search_bar clearfix">
-		<a href="index.html" class="logo fl"><img src="../static/images/logo.png"></a>
+		<a href="index.html" class="logo fl"><img src="{{ static('images/logo.png') }}"></a>
 		<div class="search_wrap fl">
 			<form method="get" action="/search/" class="search_con">
                 <input type="text" class="input_text fl" name="q" placeholder="搜索商品">
@@ -71,7 +75,7 @@
 		<div class="navbar">
 			<div class="sub_menu_con fl">
 				<h1 class="fl">商品分类</h1>
-				<ul class="sub_menu">			
+				<ul class="sub_menu">
 					<li>
 						<div class="level1">
 							<a href="http://shouji.jd.com/">手机</a><a href="#">运营商</a><a href="#">数码</a>
@@ -84,7 +88,7 @@
 									<a href="#">对讲机</a>
 									<a href="#">以旧换新</a>
 									<a href="#">手机维修</a>
-								</div>						
+								</div>
 							</div>
 							<div class="list_group">
 								<div class="group_name fl">运营商 &gt;</div>
@@ -99,7 +103,7 @@
 									<a href="#">中国联通</a>
 									<a href="#">京东通信</a>
 									<a href="#">170选号</a>
-								</div>												
+								</div>
 							</div>
 						</div>
 					</li>
@@ -118,7 +122,7 @@
 									<a href="#">4K超清电视</a>
 									<a href="#">人工智能电视</a>
 									<a href="#">55英寸</a>
-									<a href="#">65英寸</a>							        
+									<a href="#">65英寸</a>
 								</div>
 							</div>
 						</div>
@@ -138,7 +142,7 @@
 									<a href="#">4K超清电视</a>
 									<a href="#">人工智能电视</a>
 									<a href="#">55英寸</a>
-									<a href="#">65英寸</a>							        
+									<a href="#">65英寸</a>
 								</div>
 							</div>
 						</div>
@@ -151,7 +155,7 @@
 							<div class="list_group">
 								<div class="group_name fl">男装 &gt;</div>
 								<div class="group_detail fl">
-									<a href="#">男装</a>					        
+									<a href="#">男装</a>
 								</div>
 							</div>
 						</div>
@@ -164,7 +168,7 @@
 							<div class="list_group">
 								<div class="group_name fl">女鞋 &gt;</div>
 								<div class="group_detail fl">
-									<a href="#">女鞋</a>					        
+									<a href="#">女鞋</a>
 								</div>
 							</div>
 						</div>
@@ -177,7 +181,7 @@
 							<div class="list_group">
 								<div class="group_name fl">男鞋 &gt;</div>
 								<div class="group_detail fl">
-									<a href="#">男鞋</a>					        
+									<a href="#">男鞋</a>
 								</div>
 							</div>
 						</div>
@@ -190,7 +194,7 @@
 							<div class="list_group">
 								<div class="group_name fl">汽车用品 &gt;</div>
 								<div class="group_detail fl">
-									<a href="#">汽车用品</a>					        
+									<a href="#">汽车用品</a>
 								</div>
 							</div>
 						</div>
@@ -203,7 +207,7 @@
 							<div class="list_group">
 								<div class="group_name fl">玩具乐器 &gt;</div>
 								<div class="group_detail fl">
-									<a href="#">玩具乐器</a>					        
+									<a href="#">玩具乐器</a>
 								</div>
 							</div>
 						</div>
@@ -216,7 +220,7 @@
 							<div class="list_group">
 								<div class="group_name fl">食品 &gt;</div>
 								<div class="group_detail fl">
-									<a href="#">食品</a>					        
+									<a href="#">食品</a>
 								</div>
 							</div>
 						</div>
@@ -229,7 +233,7 @@
 							<div class="list_group">
 								<div class="group_name fl">图书 &gt;</div>
 								<div class="group_detail fl">
-									<a href="#">图书</a>					        
+									<a href="#">图书</a>
 								</div>
 							</div>
 						</div>
@@ -242,13 +246,13 @@
 							<div class="list_group">
 								<div class="group_name fl">机票 &gt;</div>
 								<div class="group_detail fl">
-									<a href="#">机票</a>					        
+									<a href="#">机票</a>
 								</div>
 							</div>
 						</div>
 					</li>
 				</ul>
-			</div>		
+			</div>
 
 
 			<ul class="navlist fl">
@@ -261,18 +265,28 @@
 		</div>
 	</div>
 
-	<div class="breadcrumb">
-        <a href="javascript:;">{{ breadcrumb.cat1.name }}</a>
-        <span>></span>
-        <a href="javascript:;">{{ breadcrumb.cat2.name }}</a>
-        <span>></span>
-        <a href="javascript:;">{{ breadcrumb.cat3.name }}</a>
-    </div>
+        <div class="breadcrumb">
+            <a href="javascript:;">{{ breadcrumb.cat1.name }}</a>
+            <span>></span>
+            <a href="javascript:;">{{ breadcrumb.cat2.name }}</a>
+            <span>></span>
+            <a href="javascript:;">{{ breadcrumb.cat3.name }}</a>
+        </div>
 
 	<div class="main_wrap clearfix">
+		<div class="l_wrap fl clearfix">
+			<div class="new_goods" v-cloak>
+    <h3>热销排行</h3>
+    <ul>
+        <li v-for="sku in hots">
+            <a :href="sku.url"><img :src="sku.default_image_url"></a>
+            <h4><a :href="sku.url">[[ sku.name ]]</a></h4>
+            <div class="price">￥[[ sku.price ]]</div>
+        </li>
+    </ul>
+</div>
+		</div>
 
-
-{#        渲染分页和排序数据#}
 		<div class="r_wrap fr clearfix">
             <div class="sort_bar">
                 <a href="{{ url('goods:list', args=(category.id, page_num)) }}?sort=default" {% if sort == 'default' %}class="active"{% endif %}>默认</a>
@@ -292,57 +306,13 @@
                 </li>
                 {% endfor %}
             </ul>
-{#            准备分页器标签#}
+
             <div class="pagenation">
                 <div id="pagination" class="page"></div>
             </div>
-
         </div>
 
-
-		<div class="r_wrap fr clearfix">
-			<div class="sort_bar">
-				<a href="#" class="active">默认</a>
-				<a href="#">价格</a>
-				<a href="#">人气</a>
-			</div>
-
-			<ul class="goods_type_list clearfix">
-				<li>
-					<a href="../static/detail.html"><img src="../static/images/goods/goods003.jpg"></a>
-					<h4><a href="../static/detail.html">360手机 N6 Pro 全网通 6GB+128GB 极夜黑</a></h4>
-					<div class="operate">
-						<span class="price">￥16.80</span>
-						<span class="unit">台</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="../static/images/goods/goods005.jpg"></a>
-					<h4><a href="#">360手机 N6 Pro 全网通 6GB+128GB 极夜黑</a></h4>
-					<div class="operate">
-						<span class="price">￥10.00</span>
-						<span class="unit">台</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-				<li>
-					<a href="#"><img src="../static/images/goods/goods002.jpg"></a>
-					<h4><a href="#">360手机 N6 Pro 全网通 6GB+128GB 极夜黑</a></h4>
-					<div class="operate">
-						<span class="price">￥28.80</span>
-						<span class="unit">台</span>
-						<a href="#" class="add_goods" title="加入购物车"></a>
-					</div>
-				</li>
-			</ul>
-
-			<div class="pagenation">
-                <div id="pagination" class="page"></div>
-            </div>
-
-		</div>
-	</div>
+    </div>
 
 	<div class="footer">
 		<div class="foot_link">
@@ -352,17 +322,18 @@
 			<span>|</span>
 			<a href="#">招聘人才</a>
 			<span>|</span>
-			<a href="#">友情链接</a>		
+			<a href="#">友情链接</a>
 		</div>
 		<p>CopyRight © 2016 北京美多商业股份有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
 	</div>
-        <script type="text/javascript" src="{{ static('js/host.js') }}"></script>
+		<script type="text/javascript" src="{{ static('js/host.js') }}"></script>
 		<script type="text/javascript" src="{{ static('js/common.js') }}"></script>
-	    <script type="text/javascript" src="{{ static('js/list.js') }}"></script>
-	    <script type="text/javascript" src="{{ static('js/jquery.pagination.min.js') }}"></script>
-	    <script>
+	<script type="text/javascript" src="{{ static('js/list.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/jquery.pagination.min.js') }}"></script>
+
+    <script>
         $(function () {
         $('#pagination').pagination({
             currentPage: {{ page_num }},
