--- a/meiduo_hersin/templates/detail.html
+++ b/meiduo_hersin/templates/detail.html
@@ -30,7 +30,7 @@
 
                 <div class="user_link fl">
                     <span>|</span>
-                    <a href="/info/">用户中心</a>
+                    <a href="{{ url('users:center') }}">用户中心</a>
                     <span>|</span>
                     <a href="/carts/">我的购物车</a>
                     <span>|</span>
