用户购物车的添加(没有考虑累加的情况)

--- a/meiduo_hersin/templates/detail.html
+++ b/meiduo_hersin/templates/detail.html
@@ -14,6 +14,7 @@
 <body>
 	<div id="app" v-cloak>
 	<div class="header_con">
+        {{ csrf_input }}
 		<div class="header">
 			<div class="welcome fl">欢迎来到美多商城!</div>
 			<div class="fr">
@@ -302,7 +303,7 @@
         {% endfor %}
         <div class="total" v-cloak>总价：<em>[[ sku_amount ]]元</em></div>
         <div class="operate_btn">
-            <a href="javascript:;" class="add_cart" id="add_cart">加入购物车</a>
+            <a href="javascript:;" class="add_cart" id="add_cart" @click="add_cart">加入购物车</a>
         </div>
     </div>
 </div>
