--- a/meiduo_hersin/templates/detail.html
+++ b/meiduo_hersin/templates/detail.html
@@ -33,7 +33,7 @@
                     <span>|</span>
                     <a href="{{ url('users:center') }}">用户中心</a>
                     <span>|</span>
-                    <a href="/carts/">我的购物车</a>
+                    <a href="{{ url('carts:cart') }}">我的购物车</a>
                     <span>|</span>
                     <a href="/orders/">我的订单</a>
                 </div>
