--- a/meiduo_hersin/templates/place_order.html
+++ b/meiduo_hersin/templates/place_order.html
@@ -119,8 +119,8 @@
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
 	</div>
-	<script type="text/javascript" src="js/host.js"></script>
-	<script type="text/javascript" src="js/common.js"></script>
-	<script type="text/javascript" src="js/place_order.js"></script>
+	<script type="text/javascript" src="{{ static('js/host.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/common.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/place_order.js') }}"></script>
 </body>
 </html>
