--- a/meiduo_hersin/templates/pay_success.html
+++ b/meiduo_hersin/templates/pay_success.html
@@ -3,12 +3,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>美多商城-支付成功</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/main.css">
-    <script type="text/javascript" src="../static/js/host.js"></script>
-    <script type="text/javascript" src="../static/js/common.js"></script>
-    <script type="text/javascript" src="../static/js/vue-2.5.16.js"></script>
-    <script type="text/javascript" src="../static/js/axios-0.18.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/main.css">
+    <script type="text/javascript" src="../../static/js/host.js"></script>
+    <script type="text/javascript" src="../../static/js/common.js"></script>
+    <script type="text/javascript" src="../../static/js/vue-2.5.16.js"></script>
+    <script type="text/javascript" src="../../static/js/axios-0.18.0.min.js"></script>
 </head>
 <body>
     <div class="header_con">
@@ -32,11 +32,11 @@
                     <a href="../static/user_center_order.html">我的订单</a>
                 </div>
             </div>
-        </div>      
+        </div>
     </div>
 
     <div class="search_bar clearfix">
-        <a href="index.html" class="logo fl"><img src="../static/images/logo.png"></a>
+        <a href="index.html" class="logo fl"><img src="{{ static('images/logo.png') }}"></a>
         <div class="search_wrap fl">
             <form method="get" action="/search/" class="search_con">
                 <input type="text" class="input_text fl" name="q" placeholder="搜索商品">
@@ -48,13 +48,13 @@
                 <li><a href="#">美妆个护</a></li>
                 <li><a href="#">买2免1</a></li>
             </ul>
-        </div>      
+        </div>
     </div>
 
     <div class="common_list_con clearfix">
         <div class="order_success">
             <p><b>订单支付成功</b></p>
-            <p>您的订单已成功支付，支付交易号：2018112622001434510500548605</p>
+            <p>您的订单已成功支付，支付交易号：{{ trade_no }}</p>
             <p><a href="../static/user_center_order.html">您可以在【用户中心】->【我的订单】查看该订单</a></p>
         </div>
     </div>
