--- a/meiduo_hersin/templates/user_center_site.html
+++ b/meiduo_hersin/templates/user_center_site.html
@@ -92,7 +92,7 @@
                     <li><span>电子邮箱：</span><b>[[ address.email ]]</b></li>
                 </ul>
                 <div class="down_btn">
-                    <a v-if="address.id!=default_address_id">设为默认</a>
+                    <a v-if="address.id!=default_address_id" @click="set_default(index)">设为默认</a>
                     <a href="javascript:;" class="edit_icon" @click="show_edit_site(index)" >编辑</a>
                 </div>
             </div>
