--- a/meiduo_hersin/templates/index.html
+++ b/meiduo_hersin/templates/index.html
@@ -23,7 +23,7 @@
                     <a href="{{ url('users:logout') }}">退出</a>
                 </div>
                 <div v-else class="login_btn fl">
-                    <a href="login.html">登录</a>
+                    <a href="../static/hersin/login.html">登录</a>
                     <span>|</span>
                     <a href="register.html">注册</a>
                 </div>
