--- a/meiduo_hersin/templates/user_center_info.html
+++ b/meiduo_hersin/templates/user_center_info.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>美多商城-用户中心</title>
 	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../static/css/main.css">
+	<link rel="stylesheet" type="text/css" href="../static/hersin/main.css">
     <script type="text/javascript" src="../static/js/host.js"></script>
     <script type="text/javascript" src="../static/js/common.js"></script>
 	<script type="text/javascript" src="../static/js/vue-2.5.16.js"></script>
@@ -27,7 +27,7 @@
 					欢迎您：<em>{{ username }}</em>
 				</div>
 				<div class="login_btn fl">
-					<a href="login.html">登录</a>
+					<a href="../static/hersin/login.html">登录</a>
 					<span>|</span>
 					<a href="register.html">注册</a>
 				</div>
