--- a/meiduo_hersin/templates/pay_success.html
+++ b/meiduo_hersin/templates/pay_success.html
@@ -3,12 +3,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <title>美多商城-支付成功</title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/main.css">
-    <script type="text/javascript" src="../../static/js/host.js"></script>
-    <script type="text/javascript" src="../../static/js/common.js"></script>
-    <script type="text/javascript" src="../../static/js/vue-2.5.16.js"></script>
-    <script type="text/javascript" src="../../static/js/axios-0.18.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{ static('css/reset.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ static('css/main.css') }}">
+    <script type="text/javascript" src="{{ static('js/host.js') }}"></script>
+    <script type="text/javascript" src="{{ static('js/common.js') }}"></script>
+    <script type="text/javascript" src="{{ static('js/vue-2.5.16.js') }}"></script>
+    <script type="text/javascript" src="{{ static('js/axios-0.18.0.min.js') }}"></script>
 </head>
 <body>
     <div class="header_con">
@@ -19,7 +19,7 @@
                     欢迎您：<em>张 山</em>
                 </div>
                 <div class="login_btn fl">
-                    <a href="../static/hersin/login.html">登录</a>
+                    <a href="../templates/login.html">登录</a>
                     <span>|</span>
                     <a href="register.html">注册</a>
                 </div>
