--- a/meiduo_hersin/templates/place_order.html
+++ b/meiduo_hersin/templates/place_order.html
@@ -3,7 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>美多商城-订单确认</title>
-	<link rel="stylesheet" type="text/css" href="../../static/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="{{ static('css/reset.css') }}">
     <link rel="stylesheet" type="text/css" href="{{ static('css/main.css') }}">
     <script type="text/javascript" src="{{ static('js/host.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/vue-2.5.16.js') }}"></script>
