--- a/meiduo_hersin/templates/login.html
+++ b/meiduo_hersin/templates/login.html
@@ -25,12 +25,15 @@
                 </div>
                 <div class="form_con">
                     <div class="form_input cur">
+
+
+
                         <form method="post" class="login" @submit="on_submit">
                             {{ csrf_input }}
                             <input type="text" name="username" v-model="username" @blur="check_username"
                                    class="name_input" placeholder="请输入用户">
                             <div class="user_error" v-show="error_username">[[ error_username_message ]]</div>
-                            <input type="password" name="pwd" v-model="password" @blur="check_pwd" class="pass_input"
+                            <input type="password" name="password" v-model="password" @blur="check_pwd" class="pass_input"
                                    placeholder="请输入密码">
                             <div class="pwd_error" v-show="error_password">[[ error_password_message ]]</div>
                             <div class="more_input clearfix">
@@ -43,12 +46,15 @@
                                 <span class="error_tip2">{{ loginerror }}</span>
                             {% endif %}
                         </form>
+
+
+
                     </div>
                 </div>
                 <div class="third_party">
                     <a href="javascript:;" class="qq_login" @click="qq_login">QQ</a>
                      <a href="#" class="weixin_login" >微信</a>
-                    <a href="#" class="weibo_login" @click="weibo_login">微博</a>
+{#                    <a href="#" class="weibo_login" @click="weibo_login">微博</a>#}
                     <a href="/register/" class="register_btn">立即注册</a>
                 </div>
 
