--- a/meiduo_hersin/templates/order_success.html
+++ b/meiduo_hersin/templates/order_success.html
@@ -19,7 +19,7 @@
 					欢迎您：<em>张 山</em>
 				</div>
 				<div class="login_btn fl">
-					<a href="../static/hersin/login.html">登录</a>
+					<a href="../templates/login.html">登录</a>
 					<span>|</span>
 					<a href="register.html">注册</a>
 				</div>
