--- a/meiduo_hersin/templates/register.html
+++ b/meiduo_hersin/templates/register.html
@@ -20,7 +20,7 @@
 		<div class="r_con fr">
 			<div class="reg_title clearfix">
 				<h1>用户注册</h1>
-				<a href="../static/hersin/login.html">登录</a>
+				<a href="../templates/login.html">登录</a>
 			</div>
 			<div class="reg_form clearfix">
 				<form method="post" class="register_form" v-on:submit="on_submit">
