--- a/meiduo_hersin/templates/user_center_site.html
+++ b/meiduo_hersin/templates/user_center_site.html
@@ -3,11 +3,11 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 	<title>美多商城-用户中心</title>
-	<link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-	<link rel="stylesheet" type="text/css" href="../static/hersin/main.css">
-    <script type="text/javascript" src="../static/js/host.js"></script>
-	<script type="text/javascript" src="../static/js/vue-2.5.16.js"></script>
-    <script type="text/javascript" src="../static/js/axios-0.18.0.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="{{ static('css/reset.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ static('css/main.css') }}">
+    <script type="text/javascript" src="{{ static('js/host.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/vue-2.5.16.js') }}"></script>
+    <script type="text/javascript" src="{{ static('js/axios-0.18.0.min.js') }}"></script>
     <!-- 将后端模板数据传递到Vue.js -->
     <script type="text/javascript">
     let addresses = {{ addresses | safe }};
@@ -24,7 +24,7 @@
 					欢迎您：<em>张 山</em>
 				</div>
 				<div class="login_btn fl">
-					<a href="../static/hersin/login.html">登录</a>
+					<a href="../templates/login.html">登录</a>
 					<span>|</span>
 					<a href="register.html">注册</a>
 				</div>
@@ -193,8 +193,8 @@
 		<div class="mask"></div>
 	</div>
 	</div>
-	<script type="text/javascript" src="../static/js/host.js"></script>
-	<script type="text/javascript" src="../static/js/common.js"></script>
-	<script type="text/javascript" src="../static/js/user_center_site.js"></script>
+	<script type="text/javascript" src="{{ static('js/host.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/common.js') }}"></script>
+	<script type="text/javascript" src="{{ static('js/user_center_site.js') }}"></script>
 </body>
 </html>
